# newrelic-auth-rs

./: .codespellrc  CHANGELOG.md  Cargo.toml  DEVEL.md  Dockerfile  LICENSE.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.md.tmpl  deny.toml
.cargo/: config.toml
.github/workflows/: component_check_system_identity_endpoints.yml  component_image.yml  component_image_security.yml  component_security.yml  docs.yaml  nightly.yml  on-push-pr.yaml  on_demand_generate_prerelease_pr.yml  on_demand_prerelease.yml  on_pr_check_changelog.yml  on_prerelease.yml  on_release.yml  repolinter.yml  security.yml  third_party_licenses_check.yml
examples/generate-l1-si/: .env.dist  client.rs  main.rs
examples/generate-l2-si/: .env.dist  README.md  main.rs
examples/http/: client.rs
examples/http-client/: Cargo.toml
examples/jwt-signer-local/: .env.dist  README.md  main.rs
examples/jwt-signer-vault/: .env.dist  README.md  main.rs
examples/retrieve-token/: .env.dist  Cargo.toml  README.md  client.rs  main.rs
examples/retrieve-token/src/: main.rs
examples/retrieve-token/src/http/: client.rs
examples/utils/: os.rs
nr-auth/: Cargo.toml  README.md
nr-auth/src/: authenticator.rs  jwt.rs  lib.rs  token.rs  token_retriever.rs
nr-auth/src/jwt/: claims.rs  signed.rs  signer.rs
nr-auth/src/jwt/signer/: local.rs
src/: authenticator.rs  commands.rs  http_client.rs  iam_client.rs  key.rs  key_pair_generator.rs  lib.rs  parameters.rs  system_identity.rs  system_identity_generator.rs  token.rs  token_retriever.rs
src/commands/: add.rs  create.rs  retrieve.rs  retrieve_token.rs
src/http/: client.rs  config.rs
src/jwt/: claims.rs  error.rs  signer.rs
src/jwt/signer/: local.rs
src/key/: creator.rs  generation.rs  local.rs  rsa.rs
src/system_identity/: client_input.rs  creation_response.rs  environment.rs  generator.rs  http_token_retriever.rs  iam_client.rs  identity_creator.rs  input_data.rs  l1_token_retriever.rs  output_platform.rs  types.rs
src/system_identity/creation_response/: l1.rs  l2.rs
src/system_identity/iam_client/: error.rs  http.rs  http_iam_client.rs  http_impl.rs  http_token_retriever.rs  l1_creator.rs  l1_token_retriever.rs  l2_creator.rs  response_data.rs
src/system_identity/input_data/: auth_method.rs  environment.rs  output_platform.rs
src/token_retriever/: credential.rs  http.rs  http_impl.rs  l1_retriever.rs
super-agent/src/opamp/auth/: http_client.rs
