[package]
name = "nr-auth"
description = "Crate to manage NR System Identity Service authentication"
version = "0.1.2"
edition = "2024"
authors = ["The New Relic Agent Control Team"]
publish = false
license-file = "./LICENSE.md"
rust-version = "1.89.0"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.3.0", features = [ "aws_lc_rs" ]}
clap = { version = "4.5.55", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["blocking", "socks", "json"] }
uuid = { version = "1.20.0", features = ["serde", "v7"] }
tracing = "0.1.44"
http = "1.4.0"
rcgen = { version = "0.14.7", features = ["aws_lc_rs"] }
base64 = "0.22.1"
tracing-subscriber = "0.3.22"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.14.0"
http = "1.4.0"
thiserror = "2.0.18"
# Alpha version needed to test proxy the feature, it is safe because it is only used as dev-dependency
httpmock = { version = "0.8.2", features = ["proxy"] }
dotenvy = "0.15.7"
vaultrs = "0.7.4"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
base64 = "0.22.1"
sha2 = "0.10.9"
tempfile = "3.24.0"
rstest = "0.26.1"

[[bin]]
name = "newrelic-auth-cli"
path = "src/bin/main.rs"
