[package]
name = "nr-auth"
description = "Crate to manage NR System Identity Service authentication"
version = "0.4.0"
edition = "2024"
authors = ["The New Relic Agent Control Team"]
publish = false
license-file = "./LICENSE.md"
rust-version = "1.94.1"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "socks", "json"] }
uuid = { version = "1.23.0", features = ["serde", "v7"] }
tracing = "0.1.44"
http = "1.4.0"
rcgen = { version = "0.14.7", default-features = false, features = ["aws_lc_rs", "pem"] }
base64 = "0.22.1"
tracing-subscriber = "0.3.23"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.14.0"
http = "1.4.0"
thiserror = "2.0.18"
httpmock = { version = "0.8.3", features = ["proxy"] }
dotenvy = "0.15.7"
vaultrs = "0.8.0"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.23"
base64 = "0.22.1"
sha2 = "0.11.0"
tempfile = "3.27.0"
rstest = "0.26.1"

[[bin]]
name = "newrelic-auth-cli"
path = "src/bin/main.rs"
