[package]
name = "nr-auth"
description = "Crate to manage NR System Identity Service authentication"
version = "0.0.1"
edition = "2021"
authors = ["The New Relic Super Agent Team"]
publish = false

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonwebtoken = "9.3.0"
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v7"] }

[dev-dependencies]
assert_matches = { workspace = true }
httpmock = "0.7.0"
mockall = { workspace = true }
